--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ apply plugin: 'maven-publish'
 
 /* Version info */
 group = "gov.nih.nci.evs.api"
-version = "1.1.1-SNAPSHOT"
+version = "1.1.0.RELEASE"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
