--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -1,6 +1,6 @@
 # constructClassCountsQuery(String namedGraph)
 class.counts=SELECT ( count(?class) as ?count ) { \n\
-    GRAPH <%1$s> { \n\
+    GRAPH <#{namedGraph}> { \n\
         ?class a owl:Class \n\
   }\n\
 }
@@ -9,7 +9,7 @@ class.counts=SELECT ( count(?class) as ?count ) { \n\
 all.graph.names=select distinct ?graphName where { graph ?graphName {?s ?p ?o} }
 
 # constructVersionInfoQuery(String namedGraph)
-version.info=SELECT ?version ?date ?comment { GRAPH <%1$s> {\n\
+version.info=SELECT ?version ?date ?comment { GRAPH <#{namedGraph}> {\n\
     ?o a owl:Ontology .\n\
     ?o owl:versionInfo ?version .\n\
     ?o dc:date ?date .\n\
@@ -19,18 +19,18 @@ version.info=SELECT ?version ?date ?comment { GRAPH <%1$s> {\n\
 
 # constructAxiomQualifierQuery(String propertyCode, String namedGraph)
 axiom.qualifier=SELECT DISTINCT ?propertyValue\n\
-{ GRAPH <%2$s>\n\
+{ GRAPH <#{namedGraph}>\n\
   { ?axiom a owl:Axiom .\n\
-    ?axiom :%1$s?propertyValue\n\
+    ?axiom :#{propertyCode}?propertyValue\n\
   }\n\
 }\n\
 ORDER BY ?propertyValue
 
 # constructPropertyQuery(String conceptCode, String namedGraph)
 property=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue\n\
-{ GRAPH <%2$s>\n\
+{ GRAPH <#{namedGraph}>\n\
   { ?concept a owl:Class .\n\
-    ?concept :NHC0 "%1$s" .\n\
+    ?concept :NHC0 "#{conceptCode}" .\n\
     ?concept ?property ?propertyValue .\n\
     ?property a owl:AnnotationProperty .\n\
     ?property rdfs:label ?propertyLabel .\n\
@@ -40,8 +40,8 @@ property=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue\n\
 
 # constructPropertyNoRestrictionsQuery(String conceptCode, String namedGraph)
 property.no.restrictions=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue\n\
-{ GRAPH <%2$s>\n\
-  { ?concept :NHC0 "%1$s" .\n\
+{ GRAPH <#{namedGraph}>\n\
+  { ?concept :NHC0 "#{conceptCode}" .\n\
     ?concept ?property ?propertyValue .\n\
     OPTIONAL { ?property rdfs:label ?propertyLabel }.\n\
     OPTIONAL { ?property :NHC0 ?propertyCode }\n\
@@ -50,8 +50,8 @@ property.no.restrictions=SELECT ?property ?propertyCode  ?propertyLabel ?propert
 
 # constructAllPropertyQuery(String conceptCode, String namedGraph)
 all.property=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue\n\
-{ GRAPH <%2$s>\n\
-  { ?concept :NHC0 "%1$s" .\n\
+{ GRAPH <#{namedGraph}>\n\
+  { ?concept :NHC0 "#{conceptCode}" .\n\
     ?concept ?property ?propertyValue .\n\
     OPTIONAL { ?property rdfs:label ?propertyLabel }.\n\
     OPTIONAL { ?property :NHC0 ?propertyCode }\n\
@@ -60,19 +60,19 @@ all.property=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue\n\
 
 # constructConceptLabelQuery(String conceptCode, String namedGraph)
 concept.label=SELECT ?conceptLabel\n\
-{ GRAPH <%2$s>\n\
+{ GRAPH <#{namedGraph}>\n\
   {\n\
-    ?concept :NHC0 "%1$s" .\n\
+    ?concept :NHC0 "#{conceptCode}" .\n\
     ?concept rdfs:label ?conceptLabel \n\
   }\n\
 }
 
 # constructAxiomQuery(String conceptCode, String namedGraph)
 axiom=SELECT ?axiom ?axiomProperty  ?axiomValue\n\
-{ GRAPH <%2$s>\n\
+{ GRAPH <#{namedGraph}>\n\
     {\n\
       ?axiom a owl:Axiom .\n\
-      ?axiom owl:annotatedSource :%1$s .\n\
+      ?axiom owl:annotatedSource :#{conceptCode} .\n\
       ?axiom ?axiomProperty ?axiomValue\n\
     }\n\
 }\n\
@@ -80,12 +80,12 @@ ORDER BY ?axiom
 
 # constructSubconceptQuery(String conceptCode, String namedGraph)
 subconcept=SELECT ?subclass ?subclassLabel ?subclassCode\n\
-{ GRAPH <%2$s>\n\
+{ GRAPH <#{namedGraph}>\n\
         {\n\
           {\n\
             {\n\
               ?superclass a owl:Class .\n\
-              ?superclass :NHC0 "%1$s" .\n\
+              ?superclass :NHC0 "#{conceptCode}" .\n\
               ?subclass rdfs:subClassOf ?superclass .\n\
               ?subclass a owl:Class .\n\
               ?subclass rdfs:label ?subclassLabel .\n\
@@ -97,7 +97,7 @@ subconcept=SELECT ?subclass ?subclassLabel ?subclassCode\n\
           {\n\
             {\n\
               ?superclass a owl:Class .\n\
-              ?superclass :NHC0 "%1$s" .\n\
+              ?superclass :NHC0 "#{conceptCode}" .\n\
               ?equiv_concept owl:intersectionOf ?list .\n\
               ?list rdf:rest*/rdf:first ?superclass .\n\
               ?subclass owl:equivalentClass ?equiv_concept .\n\
@@ -113,12 +113,12 @@ ORDER by ?subclassLabel
 
 # constructSuperconceptQuery(String conceptCode, String namedGraph)
 superconcept=SELECT ?superclass ?superclassLabel ?superclassCode\n\
-{ GRAPH <%2$s>\n\
+{ GRAPH <#{namedGraph}>\n\
         {\n\
           {\n\
             {\n\
               ?subclass a owl:Class .\n\
-              ?subclass :NHC0 "%1$s" .\n\
+              ?subclass :NHC0 "#{conceptCode}" .\n\
               ?subclass rdfs:subClassOf ?superclass .\n\
               ?superclass a owl:Class .\n\
               ?superclass rdfs:label ?superclassLabel .\n\
@@ -130,7 +130,7 @@ superconcept=SELECT ?superclass ?superclassLabel ?superclassCode\n\
           {\n\
             {\n\
               ?subclass a owl:Class .\n\
-              ?subclass :NHC0 "%1$s" .\n\
+              ?subclass :NHC0 "#{conceptCode}" .\n\
               ?equiv_concept owl:intersectionOf ?list .\n\
               ?list rdf:rest*/rdf:first ?superclass .\n\
               ?subclass owl:equivalentClass ?equiv_concept .\n\
@@ -147,10 +147,10 @@ ORDER by ?superclassLabel
 # constructAssociationsQuery(String conceptCode, String namedGraph)
 associations=SELECT ?relationshipCode ?relationship ?relatedConceptCode ?relatedConceptLabel\n\
 {\n\
-    GRAPH <%2$s>\n\
+    GRAPH <#{namedGraph}>\n\
     {\n\
         ?x a owl:Class .\n\
-        ?x :NHC0 "%1$s"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
+        ?x :NHC0 "#{conceptCode}"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
         ?y a owl:AnnotationProperty .\n\
         ?x ?y ?z .\n\
         ?z a owl:Class .\n\
@@ -167,11 +167,11 @@ ORDER BY ?relationship ?relatedConceptLabel
 # constructInverseAssociationsQuery(String conceptCode, String namedGraph)
 inverse.associations=SELECT ?relationshipCode ?relatedConceptLabel ?relatedConceptCode ?relationship\n\
 {\n\
-    GRAPH <%2$s>\n\
+    GRAPH <#{namedGraph}>\n\
     {\n\
         ?z a owl:Class .\n\
         ?z rdfs:label ?z_label .\n\
-        ?z :NHC0 "%1$s"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
+        ?z :NHC0 "#{conceptCode}"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
         ?x a owl:Class .\n\
         ?x rdfs:label ?relatedConceptLabel .\n\
         ?x :NHC0 ?relatedConceptCode .\n\
@@ -188,7 +188,7 @@ ORDER BY ?relationship ?relatedConceptLabel
 # constructInverseRolesQuery(String conceptCode, String namedGraph)
 inverse.roles=SELECT distinct ?relatedConceptLabel ?relatedConceptCode ?relationship ?relationshipCode\n\
 {\n\
-    GRAPH <%2$s>\n\
+    GRAPH <#{namedGraph}>\n\
     {\n\
       {\n\
         ?x a owl:Class .\n\
@@ -203,7 +203,7 @@ inverse.roles=SELECT distinct ?relatedConceptLabel ?relatedConceptCode ?relation
         ?p rdfs:label ?relationship .\n\
         ?p :NHC0 ?relationshipCode .\n\
         ?z2 owl:someValuesFrom ?y .\n\
-        ?y :NHC0 "%1$s"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
+        ?y :NHC0 "#{conceptCode}"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
         ?y rdfs:label ?y_label\n\
       }\n\
       UNION\n\
@@ -218,7 +218,7 @@ inverse.roles=SELECT distinct ?relatedConceptLabel ?relatedConceptCode ?relation
         ?p :NHC0 ?relationshipCode .\n\
         ?r owl:someValuesFrom ?y .\n\
         ?y a owl:Class .\n\
-        ?y :NHC0 "%1$s"^^<http://www.w3.org/2001/XMLSchema#string> \n\
+        ?y :NHC0 "#{conceptCode}"^^<http://www.w3.org/2001/XMLSchema#string> \n\
       }\n\
       UNION\n\
       {\n\
@@ -235,7 +235,7 @@ inverse.roles=SELECT distinct ?relatedConceptLabel ?relatedConceptCode ?relation
         ?p :NHC0 ?relationshipCode .\n\
         ?z2 owl:someValuesFrom ?y .\n\
         ?y a owl:Class .\n\
-        ?y :NHC0 "%1$s"^^<http://www.w3.org/2001/XMLSchema#string> \n\
+        ?y :NHC0 "#{conceptCode}"^^<http://www.w3.org/2001/XMLSchema#string> \n\
       }\n\
       UNION\n\
       {\n\
@@ -256,7 +256,7 @@ inverse.roles=SELECT distinct ?relatedConceptLabel ?relatedConceptCode ?relation
         ?p :NHC0 ?relationshipCode .\n\
         ?z4 owl:someValuesFrom ?y .\n\
         ?y a owl:Class .\n\
-        ?y :NHC0 "%1$s"^^<http://www.w3.org/2001/XMLSchema#string> \n\
+        ?y :NHC0 "#{conceptCode}"^^<http://www.w3.org/2001/XMLSchema#string> \n\
       }\n\
    }\n\
 } \n\
@@ -265,11 +265,11 @@ ORDER BY ?relationship ?relatedConceptLabel
 # constructRolesQuery(String conceptCode, String namedGraph)
 roles=SELECT distinct ?relationship ?relationshipCode ?relatedConceptLabel ?relatedConceptCode \n\
 {\n\
-    graph <%2$s>\n\
+    graph <#{namedGraph}>\n\
     {\n\
       {\n\
         ?x a owl:Class .\n\
-        ?x :NHC0 "%1$s"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
+        ?x :NHC0 "#{conceptCode}"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
         ?x rdfs:label ?x_label .\n\
         ?x rdfs:subClassOf ?z0 .\n\
         ?z0 a owl:Class .\n\
@@ -286,7 +286,7 @@ roles=SELECT distinct ?relationship ?relationshipCode ?relatedConceptLabel ?rela
       UNION\n\
       {\n\
         ?x a owl:Class .\n\
-        ?x :NHC0 "%1$s"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
+        ?x :NHC0 "#{conceptCode}"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
         ?x rdfs:subClassOf ?r .\n\
         ?r a owl:Restriction .\n\
         ?r owl:onProperty ?p .\n\
@@ -300,7 +300,7 @@ roles=SELECT distinct ?relationship ?relationshipCode ?relatedConceptLabel ?rela
       UNION\n\
       {\n\
         ?x a owl:Class .\n\
-        ?x :NHC0 "%1$s"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
+        ?x :NHC0 "#{conceptCode}"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
         ?x owl:equivalentClass ?z .\n\
         ?z a owl:Class .\n\
         ?z owl:intersectionOf ?list .\n\
@@ -316,7 +316,7 @@ roles=SELECT distinct ?relationship ?relationshipCode ?relatedConceptLabel ?rela
       UNION\n\
       {\n\
         ?x a owl:Class .\n\
-        ?x :NHC0 "%1$s"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
+        ?x :NHC0 "#{conceptCode}"^^<http://www.w3.org/2001/XMLSchema#string> .\n\
         ?x owl:equivalentClass ?z1 .\n\
         ?z1 a owl:Class .\n\
         ?z1 owl:intersectionOf ?list1 .\n\
@@ -340,10 +340,10 @@ ORDER BY ?relationship ?relatedConceptLabel
 # constructDisjointWithQuery(String conceptCode, String namedGraph)
 disjoint.with=SELECT ?relatedConceptLabel ?relatedConceptCode ?relationship\n\
 {\n\
-    GRAPH <%2$s>\n\
+    GRAPH <#{namedGraph}>\n\
     {\n\
         ?x a owl:Class .\n\
-        ?x :NHC0 "%1$s" .\n\
+        ?x :NHC0 "#{conceptCode}" .\n\
         ?x owl:disjointWith ?concept .\n\
         ?concept :NHC0 ?relatedConceptCode .\n\
         ?concept rdfs:label ?relatedConceptLabel\n\
@@ -355,7 +355,7 @@ ORDER BY ?relatedConceptLabel
 # constructHierarchyQuery(String namedGraph)
 hierarchy=SELECT ?parentCode ?parentLabel ?childCode ?childLabel\n\
     {\n\
-    GRAPH <%1$s>\n\
+    GRAPH <#{namedGraph}>\n\
       {\n\
         {\n\
           {\n\
@@ -390,7 +390,7 @@ hierarchy=SELECT ?parentCode ?parentLabel ?childCode ?childLabel\n\
 
 # constructAllPropertiesQuery(String namedGraph)
 all.properties=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue\n\
-{ GRAPH <%1$s>\n\
+{ GRAPH <#{namedGraph}>\n\
   { ?property a owl:AnnotationProperty .\n\
     ?property rdfs:label ?propertyLabel .\n\
     ?property :NHC0 ?propertyCode .\n\
@@ -402,7 +402,7 @@ ORDER BY ?propertyLabel
 
 # constructAllAssociationsQuery(String namedGraph)
 all.associations=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue\n\
-{ GRAPH <%1$s>\n\
+{ GRAPH <#{namedGraph}>\n\
   { ?property a owl:AnnotationProperty .\n\
     ?property rdfs:label ?propertyLabel .\n\
     ?property :NHC0 ?propertyCode .\n\
@@ -414,7 +414,7 @@ ORDER BY ?propertyLabel
 
 # constructAllRolesQuery(String namedGraph)
 all.roles=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue\n\
-{ GRAPH <%1$s>\n\
+{ GRAPH <#{namedGraph}>\n\
   { ?property a owl:ObjectProperty .\n\
     ?property rdfs:label ?propertyLabel .\n\
     ?property :NHC0 ?propertyCode .\n\
@@ -425,7 +425,7 @@ ORDER BY ?propertyLabel
 
 # constructUniqueSourcesQuery(String namedGraph)
 unique.sources=SELECT DISTINCT ?propertyValue\n\
-{ GRAPH <%1$s>\n\
+{ GRAPH <#{namedGraph}>\n\
   { ?axiom a owl:Axiom .\n\
     { ?axiom :P384 ?propertyValue }\n\
     UNION\n\
