--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,10 @@ spring:
         serialization:
             INDENT_OUTPUT: true
 
+    cache:
+        jcache:
+            config: classpath:ehcache.xml
+
 management:
   endpoints:
     web:
