getTerminologies updated -- initial version

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -57,6 +57,7 @@ nci:
       monthlyGraphName: http://NCI_T
       weeklyQueryUrl: http://localhost:5820/NCIT2/query
       weeklyGraphName: http://NCI_T
+      queryUrl: http://localhost:5820/NCIT2/query
       username: admin
       password: admin
       readTimeout: 30
@@ -66,7 +67,7 @@ nci:
       forcePopulateCache: N
     elasticsearch:
       server:
-        url: http://localhost:9200/concept/_search
+        url: http://10.1.10.30:9200/concept/_search
       query:
         propertyToQuery: {
                    p108:
