--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -8,6 +8,16 @@ class.counts=SELECT ( count(?class) as ?count ) {  \
 # constructAllGraphNamesQuery()
 all.graph.names=select distinct ?graphName where { graph ?graphName {?s ?p ?o} }
 
+# constructAllGraphsAndVersionsQuery
+all.graphs.and.versions=select ?graphName ?version ?date ?comment where { \
+	graph ?graphName { \
+		?o a owl:Ontology . \
+		?o owl:versionInfo ?version .\
+	    ?o dc:date ?date . \
+	    ?o rdfs:comment ?comment \
+	} \
+}
+
 # constructVersionInfoQuery(String namedGraph)
 version.info=SELECT ?version ?date ?comment { GRAPH <#{namedGraph}> { \
     ?o a owl:Ontology . \
