query and comparator update; date is missing sometimes

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -12,9 +12,9 @@ all.graph.names=select distinct ?graphName where { graph ?graphName {?s ?p ?o} }
 all.graphs.and.versions=select ?graphName ?version ?date ?comment where { \
 	graph ?graphName { \
 		?o a owl:Ontology . \
-		?o owl:versionInfo ?version .\
-	    ?o dc:date ?date . \
-	    ?o rdfs:comment ?comment \
+		?o owl:versionInfo ?version . \
+	    OPTIONAL {?o dc:date ?date .} \
+	    OPTIONAL {?o rdfs:comment ?comment .} \
 	} \
 }
 
