--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -13,8 +13,8 @@ all.graphs.and.versions=select ?graphName ?version ?date ?comment where { \
 	graph ?graphName { \
 		?o a owl:Ontology . \
 		?o owl:versionInfo ?version . \
-	    OPTIONAL {?o dc:date ?date .} \
-	    OPTIONAL {?o rdfs:comment ?comment .} \
+	    ?o dc:date ?date . \
+	    ?o rdfs:comment ?comment . \
 	} \
 }
 
