Support for multiple terminology versions (#16)
* getTerminologies updated -- initial version

* support multiple versions in SparqlQueryManagerService -- work in progress

* updates in other classes to accommodate api changes

* javadoc updates

* query and comparator update; date is missing sometimes

* comparator logic update; montly/weekly tag logic update

* Remove weekly/monthly, and owlFileName from configuration

* construct prefix dynamically

Co-authored-by: Brian Carlsen <bcarlsen@westcoastinformatics.com>

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -53,20 +53,16 @@ nci:
       forceFileGeneration: false
       metricLogDirectory: ${user.home}/apps/evsrestapi/logs/
     stardog:
-      monthlyQueryUrl: http://localhost:5820/NCIT2/query
-      monthlyGraphName: http://NCI_T
-      weeklyQueryUrl: http://localhost:5820/NCIT2/query
-      weeklyGraphName: http://NCI_T
+      queryUrl: http://localhost:5820/NCIT2/query
       username: admin
       password: admin
       readTimeout: 30
       connectTimeout: 30
-      owlfileName: Thesaurus.owl
       populateCacheCron: 0 0 1 * * *
       forcePopulateCache: N
     elasticsearch:
       server:
-        url: http://localhost:9200/concept/_search
+        url: http://10.1.10.30:9200/concept/_search
       query:
         propertyToQuery: {
                    p108:
