--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,15 +64,11 @@ nci:
       forceFileGeneration: ${NCI_EVS_API_FORCE_FILE_GENERATION:false}
       metricLogDirectory:  ${NCI_EVS_API_METRIC_LOG_PATH:${user.home}/apps/evsrestapi/logs/}
     stardog:
-      monthlyQueryUrl: ${STARDOG_MONTHLY_QUERY_URL:http://localhost:5820/NCIT2/query}
-      monthlyGraphName: ${STARDOG_MONTHLY_GRAPH_NAME:http://NCI_T}
-      weeklyQueryUrl: ${STARDOG_WEEKLY_QUERY_URL:http://localhost:5820/NCIT2/query}
-      weeklyGraphName: ${STARDOG_WEEKLY_GRAPH_NAME:http://NCI_T}
+      queryUrl: ${STARDOG_MONTHLY_QUERY_URL:http://localhost:5820/NCIT2/query}
       username: ${STARDOG_USERNAME:REPLACE_WITH_USERNAME}
       password: ${STARDOG_PASSWORD:REPLACE_WITH_PASSWORD}
       readTimeout: ${STARDOG_READ_TIMEOUT:30}
       connectTimeout: ${STARDOG_CONNECT_TIMEOUT:30}
-      owlfileName: ${STARDOG_OWL_FILENAME:REPLACE_WITH_OWL_FILENAME}
       populateCacheCron: ${POPULATE_CACHE_CRON:0 0 1 * * *}
       forcePopulateCache: ${FORCE_POPULATE_CACHE:N}
     elasticsearch:
