--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -8,6 +8,16 @@ class.counts=SELECT ( count(?class) as ?count ) {  \
 # constructAllGraphNamesQuery()
 all.graph.names=select distinct ?graphName where { graph ?graphName {?s ?p ?o} }
 
+# constructAllGraphsAndVersionsQuery
+all.graphs.and.versions=select ?source ?graphName ?version ?date ?comment where { \
+	graph ?graphName { \
+		?source a owl:Ontology . \
+		?source owl:versionInfo ?version . \
+	    ?source dc:date ?date . \
+	    ?source rdfs:comment ?comment . \
+	} \
+}
+
 # constructVersionInfoQuery(String namedGraph)
 version.info=SELECT ?version ?date ?comment { GRAPH <#{namedGraph}> { \
     ?o a owl:Ontology . \
@@ -433,3 +443,14 @@ unique.sources=SELECT DISTINCT ?propertyValue \
   } \
 } \
 ORDER BY ?propertyValue
+
+# contructPrefix(String source)
+prefix.graph=PREFIX :<#{source}#>\n\
+PREFIX base:<#{source}>
+
+prefix.common=PREFIX owl:<http://www.w3.org/2002/07/owl#>\n\
+PREFIX rdf:<http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n\
+PREFIX rdfs:<http://www.w3.org/2000/01/rdf-schema#>\n\
+PREFIX xsd:<http://www.w3.org/2001/XMLSchema#>\n\
+PREFIX dc:<http://purl.org/dc/elements/1.1/>\n\
+PREFIX xml:<http://www.w3.org/2001/XMLSchema#>
