--- a/src/main/resources/application-thesaurus.yml
+++ b/src/main/resources/application-thesaurus.yml
@@ -173,28 +173,43 @@ thesaurus:
                           retired_concept: 'Retired_Concept'
                           }
         contributingSources: {
-                            acc: 'ACC',
-                            bridg: 'BRIDG',
-                            carelex: 'CareLex',
-                            cdisc: 'CDISC',
-                            cdisc-gloss: 'CDISC-GLOSS',
-                            crch: 'CRCH',
-                            ctcae: 'CTCAE',
-                            ctep: 'CTEP',
-                            ctrp: 'CTRP',
-                            edqm-hc: 'EDQM-HC',
-                            fda: 'FDA',
-                            gaia: 'GAIA',
-                            hl7: 'HL7',
-                            ich: 'ICH',
-                            inc: 'INC',
-                            meddra: 'MedDRA',
-                            nccn: 'NCCN',
-                            ncpdp: 'NCPDP',
-                            ndc: 'NDC',
-                            nichd: 'NICHD',                          
-                            pi-rads: 'PI-RADS',
-                            ucum: 'UCUM'        
+                            ACC: 'American College of Cardiology',
+                            BioCarta: 'BioCarta online maps of molecular pathways, adapted for NCI use',
+                            BRIDG: 'Biomedical Research Integrated Domain Model Group',
+                            CareLex: 'CareLex electronic Trial Master File Terminology',
+                            CDC: 'U.S. Centers for Disease Control and Prevention',
+                            CDISC: 'Clinical Data Interchange Standards Consortium',
+                            CDISC-GLOSS: 'CDISC Glossary Terminology',
+                            COH: 'City of Hope',
+                            CRCH: 'Cancer Research Center of Hawaii Nutrition Terminology',
+                            CTCAE: 'Common Terminology Criteria for Adverse Events',
+                            CTEP: 'Cancer Therapy Evaluation Program',
+                            CTRP: 'Clinical Trials Reporting Program',
+                            DCP: 'NCI Division of Cancer Prevention Program',
+                            DICOM: 'Digital Imaging Communications in Medicine',
+                            DTP: 'NCI Developmental Therapeutics Program',
+                            EDQM: 'European Directorate for the Quality of Medicines & Healthcare',
+                            FDA: 'U.S. Food and Drug Administration',
+                            GAIA: 'Global Alignment of Immunization safety Assessment in pregnancy Terminology',
+                            GENC: 'Geopolitical Entities, Names, and Codes Terminology',
+                            HGNC: 'HUGO Gene Nomenclature Committee',
+                            ICH: 'International Conference on Harmonization',
+                            IMDRF: 'International Medical Device Regulators Forum',
+                            JAX: 'Jackson Laboratories Mouse Terminology, adapted for NCI use',
+                            KEGG: 'KEGG Pathway Database',
+                            MedDRA: 'Medical Dictionary for Regulatory Activities',
+                            MMHCC: 'Mouse Models of Human Cancer Consortium',
+                            NCCN: 'National Comprehensive Cancer Network',
+                            NCI: 'National Cancer Institute Thesaurus',
+                            NCI-GLOSS: 'NCI Dictionary of Cancer Terms',
+                            NCI-HL7: 'NCI Health Level 7',
+                            NCPDP: 'National Council for Prescription Drug Programs',
+                            NICHD: 'National Institute of Child Health and Human Development',
+                            PI-RADS: 'Prostate Imaging-Reporting and Data System',
+                            PID: 'NCI Nature Pathway Interaction Database',
+                            RENI: 'Registry Nomenclature Information System',
+                            UCUM: 'Unified Code for Units of Measure',
+                            Zebrafish: 'Zebrafish Model Organism Database'        
                          }
         sourcesToBeRemoved: ['cadsr', 'CADSR', 'CAdsr','caDSR'
                         ]                 
