Add ability to look up properties only used as qualifiers, and properties NEVER used and remove them from consideration in the /properties  call

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -410,6 +410,30 @@ all.properties=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
 } \
 ORDER BY ?propertyLabel
 
+# constructAllQualifiersQuery(String namedGraph)
+all.qualifiers=SELECT DISTINCT ?propertyCode \
+{ GRAPH <#{namedGraph}> \
+  { \
+    ?z_axiom owl:annotatedProperty ?p . \
+    ?p a owl:AnnotationProperty . \
+    ?qualifier a owl:AnnotationProperty . \
+    ?z_axiom ?qualifier ?z . \
+    ?qualifier :NHC0 ?propertyCode \
+  } \
+} \
+ORDER BY ?propertyCode
+
+# constructAllPropertiesNeverUsedQuery(String namedGraph)
+all.propertiesNeverUsed=SELECT DISTINCT ?propertyCode \
+{ GRAPH <#{namedGraph}> \
+  { \
+    ?property a owl:AnnotationProperty . \
+    ?property :NHC0 ?propertyCode . \
+    filter not exists { ?x ?property ?z } \
+  } \
+} \
+ORDER BY ?propertyCode
+
 # constructAllAssociationsQuery(String namedGraph)
 all.associations=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> \
@@ -423,7 +447,7 @@ all.associations=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
 ORDER BY ?propertyLabel
 
 # constructAllRolesQuery(String namedGraph)
-all.roles=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
+all.roles=SELECT ?property ?propertyCode ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:ObjectProperty . \
     ?property rdfs:label ?propertyLabel . \
