--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -1,4 +1,5 @@
 # constructClassCountsQuery(String namedGraph)
+# @deprecated
 class.counts=SELECT ( count(?class) as ?count ) {  \
     GRAPH <#{namedGraph}> {  \
         ?class a owl:Class  \
@@ -410,6 +411,30 @@ all.properties=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
 } \
 ORDER BY ?propertyLabel
 
+# constructAllQualifiersQuery(String namedGraph)
+all.qualifiers=SELECT DISTINCT ?propertyCode \
+{ GRAPH <#{namedGraph}> \
+  { \
+    ?z_axiom owl:annotatedProperty ?p . \
+    ?p a owl:AnnotationProperty . \
+    ?qualifier a owl:AnnotationProperty . \
+    ?z_axiom ?qualifier ?z . \
+    ?qualifier :NHC0 ?propertyCode \
+  } \
+} \
+ORDER BY ?propertyCode
+
+# constructAllPropertiesNeverUsedQuery(String namedGraph)
+all.propertiesNeverUsed=SELECT DISTINCT ?propertyCode \
+{ GRAPH <#{namedGraph}> \
+  { \
+    ?property a owl:AnnotationProperty . \
+    ?property :NHC0 ?propertyCode . \
+    filter not exists { ?x ?property ?z } \
+  } \
+} \
+ORDER BY ?propertyCode
+
 # constructAllAssociationsQuery(String namedGraph)
 all.associations=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> \
@@ -423,7 +448,7 @@ all.associations=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
 ORDER BY ?propertyLabel
 
 # constructAllRolesQuery(String namedGraph)
-all.roles=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
+all.roles=SELECT ?property ?propertyCode ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:ObjectProperty . \
     ?property rdfs:label ?propertyLabel . \
@@ -445,12 +470,13 @@ unique.sources=SELECT DISTINCT ?propertyValue \
 ORDER BY ?propertyValue
 
 # contructPrefix(String source)
-prefix.graph=PREFIX :<#{source}#>\n\
+prefix.graph=PREFIX :<#{source}#> \
 PREFIX base:<#{source}>
 
-prefix.common=PREFIX owl:<http://www.w3.org/2002/07/owl#>\n\
-PREFIX rdf:<http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n\
-PREFIX rdfs:<http://www.w3.org/2000/01/rdf-schema#>\n\
-PREFIX xsd:<http://www.w3.org/2001/XMLSchema#>\n\
-PREFIX dc:<http://purl.org/dc/elements/1.1/>\n\
-PREFIX xml:<http://www.w3.org/2001/XMLSchema#>
+prefix.common=PREFIX owl:<http://www.w3.org/2002/07/owl#> \
+PREFIX rdf:<http://www.w3.org/1999/02/22-rdf-syntax-ns#> \
+PREFIX rdfs:<http://www.w3.org/2000/01/rdf-schema#> \
+PREFIX xsd:<http://www.w3.org/2001/XMLSchema#> \
+PREFIX dc:<http://purl.org/dc/elements/1.1/> \
+PREFIX xml:<http://www.w3.org/2001/XMLSchema#> 
+
