moving loading functionality to java - work in progress

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -521,3 +521,329 @@ PREFIX xsd:<http://www.w3.org/2001/XMLSchema#> \
 PREFIX dc:<http://purl.org/dc/elements/1.1/> \
 PREFIX xml:<http://www.w3.org/2001/XMLSchema#> 
 
+# batch queries
+
+all.concepts=SELECT ?concept_code ?concept_label \
+{ GRAPH <#{namedGraph}> { \
+        ?concept a owl:Class . \
+        ?concept rdfs:label ?concept_label . \
+        ?concept :NHC0 ?concept_code \
+    } \
+} \
+ORDER BY ?concept_code 
+
+all.concepts.batch=SELECT ?concept_code ?concept_label \
+{ GRAPH <#{namedGraph}> { \
+        ?concept a owl:Class . \
+        FILTER (?concept_code IN (#{inClause})) . \
+        ?concept rdfs:label ?concept_label . \
+        ?concept :NHC0 ?concept_code \
+    } \
+}
+
+all.properties.all.concepts=SELECT ?concept_code ?property ?property_code ?property_label ?property_value \
+{ GRAPH <#{namedGraph}> { \
+        ?concept a owl:Class . \
+        ?concept :NHC0 ?concept_code . \
+        FILTER (?concept_code IN (#{inClause})) . \
+        ?concept ?property ?property_value . \
+        ?property a owl:AnnotationProperty . \
+        ?property rdfs:label ?property_label . \
+        OPTIONAL { ?property :NHC0 ?property_code } \
+    } \
+} \
+ORDER BY ?concept_code ?property_code
+
+all.axioms.all.concepts=SELECT ?concept_code ?axiom ?axiomProperty ?axiomValue \
+{ GRAPH <#{namedGraph}> { \
+      ?concept a owl:Class . \
+      ?concept :NHC0 ?concept_code . \
+      FILTER (?concept_code IN (#{inClause})) . \
+      ?axiom a owl:Axiom . \
+      ?axiom owl:annotatedSource ?concept . \
+      ?axiom ?axiomProperty ?axiomValue \
+    } \
+} \
+ORDER BY ?axiom
+
+all.subclasses.all.concepts=SELECT ?concept_code ?subclass ?subclass_label ?subclass_code \
+{ GRAPH <#{namedGraph}> \
+{ \
+    { \
+        { \
+            ?superclass a owl:Class . \
+            ?superclass :NHC0 ?concept_code  . \
+            FILTER (?concept_code IN (#{inClause})) . \
+            ?subclass rdfs:subClassOf ?superclass . \
+            ?subclass a owl:Class . \
+            ?subclass rdfs:label ?subclass_label . \
+            ?subclass :NHC0 ?subclass_code \
+        } \
+        FILTER (?superclass != ?subclass) \
+    } \
+    UNION \
+    { \
+        { \
+            ?superclass a owl:Class . \
+            ?superclass :NHC0 ?concept_code . \
+            FILTER (?concept_code IN (#{inClause})) . \
+            ?equiv_concept owl:intersectionOf ?list . \
+            ?list rdf:rest*/rdf:first ?superclass . \
+            ?subclass owl:equivalentClass ?equiv_concept . \
+            ?subclass a owl:Class . \
+            ?subclass rdfs:label ?subclass_label . \
+            ?subclass :NHC0 ?subclass_code \
+        } \
+        FILTER (?superclass != ?subclass) \
+    } \
+} \
+} \
+ORDER by ?concept_code ?subclass_label
+
+all.superclasses.all.concepts=SELECT ?concept_code ?superclass ?superclass_label ?superclass_code \
+{ GRAPH <#{namedGraph}> \
+        { \
+          { \
+            { \
+              ?subclass a owl:Class . \
+              ?subclass :NHC0 ?concept_code . \
+              FILTER (?concept_code IN (#{inClause})) . \
+              ?subclass rdfs:subClassOf ?superclass . \
+              ?superclass a owl:Class . \
+              ?superclass rdfs:label ?superclass_label . \
+              ?superclass :NHC0 ?superclass_code \
+            } \
+            FILTER (?subclass != ?superclass) \
+          } \
+          UNION \
+          { \
+            { \
+              ?subclass a owl:Class . \
+              ?subclass :NHC0 ?concept_code . \
+              FILTER (?concept_code IN (#{inClause})) . \
+              ?equiv_concept owl:intersectionOf ?list . \
+              ?list rdf:rest*/rdf:first ?superclass . \
+              ?subclass owl:equivalentClass ?equiv_concept . \
+              ?superclass a owl:Class . \
+              ?superclass rdfs:label ?superclass_label . \
+              ?superclass :NHC0 ?superclass_code \
+            } \
+            FILTER (?subclass != ?superclass) \
+          } \
+        } \
+} \
+ORDER by ?concept_code ?superclass_label
+
+all.associations.all.concepts=SELECT ?concept_code ?relationshipCode ?relationship ?relatedConceptCode ?relatedConceptLabel \
+{ \
+    GRAPH <#{namedGraph}> \
+    { \
+        ?x a owl:Class . \
+        ?x :NHC0 ?concept_code . \
+        FILTER (?concept_code IN (#{inClause})) . \
+        ?y a owl:AnnotationProperty . \
+        ?x ?y ?z . \
+        ?z a owl:Class . \
+        ?z rdfs:label ?relatedConceptLabel . \
+        ?z :NHC0 ?relatedConceptCode . \
+        ?y rdfs:label ?relationship . \
+        ?y :NHC0 ?relationshipCode . \
+        ?y rdfs:range ?y_range \
+    } \
+    FILTER (str(?y_range)="http://www.w3.org/2001/XMLSchema#anyURI") \
+} \
+ORDER BY ?concept_code ?relationship ?relatedConceptLabel
+
+all.inverse.associations.all.concepts=SELECT ?concept_code ?relationshipCode ?relatedConceptLabel ?relatedConceptCode ?relationship \
+{ \
+    GRAPH <#{namedGraph}> \
+    { \
+        ?z a owl:Class . \
+        ?z rdfs:label ?z_label . \
+        ?z :NHC0 ?concept_code . \
+        FILTER (?concept_code IN (#{inClause})) . \
+        ?x a owl:Class . \
+        ?x rdfs:label ?relatedConceptLabel . \
+        ?x :NHC0 ?relatedConceptCode . \
+        ?y a owl:AnnotationProperty . \
+        ?x ?y ?z . \
+        ?y rdfs:label ?relationship . \
+        ?y :NHC0 ?relationshipCode . \
+        ?y rdfs:range ?y_range \
+    } \
+    FILTER (str(?y_range)="http://www.w3.org/2001/XMLSchema#anyURI") \
+} \
+ORDER BY ?concept_code ?relationship ?relatedConceptLabel
+
+all.disjoint.with.all.concepts=SELECT ?concept_code ?relationship ?relatedConceptCode ?relatedConceptLabel \
+{ \
+    GRAPH <#{namedGraph}> \
+    { \
+        ?x a owl:Class . \
+        ?x :NHC0 ?concept_code . \
+        FILTER (?concept_code IN (#{inClause})) . \
+        ?x owl:disjointWith ?concept . \
+        ?concept :NHC0 ?relatedConceptCode . \
+        ?concept rdfs:label ?relatedConceptLabel \
+        BIND ("disjointWith" as ?relationship) \
+    } \
+} \
+ORDER BY ?concept_code ?relatedConceptLabel
+
+all.roles.all.concepts=SELECT distinct ?concept_code ?relationship ?relationshipCode ?relatedConceptLabel ?relatedConceptCode \
+{ \
+    graph <#{namedGraph}> \
+    { \
+      { \
+        ?x a owl:Class . \
+        ?x :NHC0 ?concept_code . \
+        FILTER (?concept_code IN (#{inClause})) . \
+        ?x rdfs:label ?x_label . \
+        ?x rdfs:subClassOf ?z0 . \
+        ?z0 a owl:Class . \
+        ?z0 owl:intersectionOf ?list . \
+        ?list rdf:rest*/rdf:first ?z2 . \
+        ?z2 a owl:Restriction . \
+        ?z2 owl:onProperty ?p . \
+        ?p rdfs:label ?relationship . \
+        ?p :NHC0 ?relationshipCode . \
+        ?z2 owl:someValuesFrom ?y . \
+        ?y :NHC0 ?relatedConceptCode . \
+        ?y rdfs:label ?relatedConceptLabel \
+      } \
+      UNION \
+      { \
+        ?x a owl:Class . \
+        ?x :NHC0 ?concept_code . \
+        FILTER (?concept_code IN (#{inClause})) . \
+        ?x rdfs:subClassOf ?r . \
+        ?r a owl:Restriction . \
+        ?r owl:onProperty ?p . \
+        ?p rdfs:label ?relationship . \
+        ?p :NHC0 ?relationshipCode . \
+        ?r owl:someValuesFrom ?y . \
+        ?y a owl:Class . \
+        ?y rdfs:label ?relatedConceptLabel . \
+        ?y :NHC0 ?relatedConceptCode \
+      } \
+      UNION \
+      { \
+        ?x a owl:Class . \
+        ?x :NHC0 ?concept_code . \
+        FILTER (?concept_code IN (#{inClause})) . \
+        ?x owl:equivalentClass ?z . \
+        ?z a owl:Class . \
+        ?z owl:intersectionOf ?list . \
+        ?list rdf:rest*/rdf:first ?z2 . \
+        ?z2 a owl:Restriction . \
+        ?z2 owl:onProperty ?p . \
+        ?p rdfs:label ?relationship . \
+        ?p :NHC0 ?relationshipCode . \
+        ?z2 owl:someValuesFrom ?y . \
+        ?y :NHC0 ?relatedConceptCode . \
+        ?y rdfs:label ?relatedConceptLabel \
+      } \
+      UNION \
+      { \
+        ?x a owl:Class . \
+        ?x :NHC0 ?concept_code . \
+        FILTER (?concept_code IN (#{inClause})) . \
+        ?x owl:equivalentClass ?z1 . \
+        ?z1 a owl:Class . \
+        ?z1 owl:intersectionOf ?list1 . \
+        ?list1 rdf:rest*/rdf:first ?z2 . \
+        ?z2 owl:unionOf ?list2 . \
+        ?list2 rdf:rest*/rdf:first ?z3 . \
+        ?z3 owl:intersectionOf ?list3 . \
+        ?list3 rdf:rest*/rdf:first ?z4 . \
+        ?z4 a owl:Restriction . \
+        ?z4 owl:onProperty ?p . \
+        ?p rdfs:label ?relationship . \
+        ?p :NHC0 ?relationshipCode . \
+        ?z4 owl:someValuesFrom ?y . \
+        ?y :NHC0 ?relatedConceptCode . \
+        ?y rdfs:label ?relatedConceptLabel \
+      } \
+   } \
+} \
+ORDER BY ?concept_code ?relationship ?relatedConceptLabel
+
+all.inverse.roles.all.concepts=SELECT distinct ?concept_code ?relationship ?relationshipCode ?relatedConceptLabel ?relatedConceptCode \
+{ \
+    GRAPH <#{namedGraph}> \
+    { \
+      { \
+        ?x a owl:Class . \
+        ?x :NHC0 ?relatedConceptCode . \
+        ?x rdfs:label ?relatedConceptLabel . \
+        ?x rdfs:subClassOf ?z0 . \
+        ?z0 a owl:Class . \
+        ?z0 owl:intersectionOf ?list . \
+        ?list rdf:rest*/rdf:first ?z2 . \
+        ?z2 a owl:Restriction . \
+        ?z2 owl:onProperty ?p . \
+        ?p rdfs:label ?relationship . \
+        ?p :NHC0 ?relationshipCode . \
+        ?z2 owl:someValuesFrom ?y . \
+        ?y :NHC0 ?concept_code . \
+        FILTER (?concept_code IN (#{inClause})) . \
+        ?y rdfs:label ?y_label \
+      } \
+      UNION \
+      { \
+        ?x a owl:Class . \
+        ?x :NHC0 ?relatedConceptCode . \
+        ?x rdfs:label ?relatedConceptLabel . \
+        ?x rdfs:subClassOf ?r . \
+        ?r a owl:Restriction . \
+        ?r owl:onProperty ?p . \
+        ?p rdfs:label ?relationship . \
+        ?p :NHC0 ?relationshipCode . \
+        ?r owl:someValuesFrom ?y . \
+        ?y a owl:Class . \
+        ?y :NHC0 ?concept_code . \
+        FILTER (?concept_code IN (#{inClause})) \
+      } \
+      UNION \
+      { \
+        ?x a owl:Class . \
+        ?x :NHC0 ?relatedConceptCode . \
+        ?x rdfs:label ?relatedConceptLabel . \
+        ?x owl:equivalentClass ?z . \
+        ?z a owl:Class . \
+        ?z owl:intersectionOf ?list . \
+        ?list rdf:rest*/rdf:first ?z2 . \
+        ?z2 a owl:Restriction . \
+        ?z2 owl:onProperty ?p . \
+        ?p rdfs:label ?relationship . \
+        ?p :NHC0 ?relationshipCode . \
+        ?z2 owl:someValuesFrom ?y . \
+        ?y a owl:Class . \
+        ?y :NHC0 ?concept_code . \
+        FILTER (?concept_code IN (#{inClause})) \
+      } \
+      UNION \
+      { \
+        ?x a owl:Class . \
+        ?x :NHC0 ?relatedConceptCode . \
+        ?x rdfs:label ?relatedConceptLabel . \
+        ?x owl:equivalentClass ?z1 . \
+        ?z1 a owl:Class . \
+        ?z1 owl:intersectionOf ?list1 . \
+        ?list1 rdf:rest*/rdf:first ?z2 . \
+        ?z2 owl:unionOf ?list2 . \
+        ?list2 rdf:rest*/rdf:first ?z3 . \
+        ?z3 owl:intersectionOf ?list3 . \
+        ?list3 rdf:rest*/rdf:first ?z4 . \
+        ?z4 a owl:Restriction . \
+        ?z4 owl:onProperty ?p . \
+        ?p rdfs:label ?relationship . \
+        ?p :NHC0 ?relationshipCode . \
+        ?z4 owl:someValuesFrom ?y . \
+        ?y a owl:Class . \
+        ?y :NHC0 ?concept_code . \
+        FILTER (?concept_code IN (#{inClause})) \
+      } \
+   } \
+} \
+ORDER BY ?concept_code ?relationship ?relatedConceptLabel
