Improve caching for evs-explore documentation interactions

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -70,7 +70,7 @@ nci:
       readTimeout: ${STARDOG_READ_TIMEOUT:30}
       connectTimeout: ${STARDOG_CONNECT_TIMEOUT:30}
       populateCacheCron: ${POPULATE_CACHE_CRON:0 0 1 * * *}
-      forcePopulateCache: ${FORCE_POPULATE_CACHE:N}
+      forcePopulateCache: ${FORCE_POPULATE_CACHE:Y}
     elasticsearch:
       server:
         url: ${EVS_ELASTIC_SEARCH_SERVER_URL:http://localhost:9200/concept_flat_full_nested_bylabel/concept/_search}
